--- a/Modulo9/aula1_seletores.css
+++ b/Modulo9/aula1_seletores.css
@@ -26,6 +26,7 @@ form {
   background-color: #c8d6e5;
   padding: 24px 0;
   text-align: center;
+  display: none;
 }
 
 form h2 {
@@ -51,4 +52,6 @@ button {
 #botao-cancel {
   background-color: red;
 }
+
+
 
