--- a/Modulo10/main.css
+++ b/Modulo10/main.css
@@ -13,16 +13,25 @@ html {
   max-width: 1024px;
   width: 100%;
   margin: 0 auto;
-  
+
 }
 
 header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+header, footer {
   background-color: #192a56;
   padding-top: 16px;
   color: white
 }
 
-header>.container {
+header >.container,
+footer >.container {
+   
   justify-content: space-between;
   align-items: center;
   padding-bottom: 16px;
@@ -73,7 +82,7 @@ nav li a {
 }
 
 section {
-  padding: 48px 0; 
+  padding: 48px 0;
 
 }
 
@@ -83,34 +92,34 @@ section h2 {
 
 .lista-veiculos {
   flex-wrap: wrap;
-  
+
 }
 
 .lista-veiculos li {
   list-style: none;
   max-width: 30%;
   margin-bottom: 24px;
-  
+
 
 }
 
 .lista-veiculos li img {
- max-width: 100% ;
-  
+  max-width: 100%;
+
 }
 
 .lista-veiculos li h3 {
-  margin: 16px 0; 
+  margin: 16px 0;
 
 }
 
 .item-central {
   margin: 0 5%;
-  
+
 
 }
 
-.lista-veiculos li button {
+button {
   display: block;
   width: 100%;
   padding: 8px 0;
@@ -125,7 +134,7 @@ section h2 {
 
 }
 
-.price  {
+.price {
   margin: 16px 0;
   display: block;
 }
@@ -134,3 +143,54 @@ section h2 {
   color: #ccc;
   font-size: 14px;
 }
+
+.form-campo {
+  margin-bottom: 16px;
+}
+
+.form-campo label {
+  font-weight: bold;
+  display: block;
+}
+
+.form-campo input,
+.form-campo textarea {
+  width: 100%;
+  display: block;
+  padding: 8px;
+}
+
+.form-campo textarea {
+  resize: none;
+  height: 120px;
+
+}
+
+form {
+  max-width: 360px;
+}
+
+form button {
+  max-width: 120px;
+}
+
+footer li {
+  list-style: none;
+margin-left: 16px;
+}
+
+footer li img {
+  height: 32px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
