--- a/Modulo11/main.css
+++ b/Modulo11/main.css
@@ -20,19 +20,20 @@ header .container {
 header {
   padding: 16px 0 0;
   border-bottom: 1px solid #ccc;
-  
+  margin-bottom: 56px;
 }
 
 .submenu {
-  display: none ;
+  display: none;
   border: 1px solid red;
   position: absolute;
   left: 0;
   width: 300px;
-  top: 100%; 
+  top: 100%;
+  background-color: #fff;
 }
 
-.menu > li {
+.menu>li {
   float: left;
   list-style: none;
   padding: 16px;
@@ -57,3 +58,44 @@ header {
   padding: 8px;
 }
 
+.conteudo {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+
+.noticia img {
+  max-width: 100%;
+}
+
+.destaque {
+  margin-bottom: 56px;
+   
+}
+
+.destaque .noticia a {
+  display: flex;
+  font-size: 2em;
+}
+
+.destaque .noticia img {
+  margin-right: 8px;
+}
+
+section h2 {
+  margin-bottom: 32px;
+}
+
+aside {
+  padding-left: 40px;
+}
+
+aside .noticia {
+  margin-bottom: 24px;
+}
+
+.noticias {
+  display: grid;
+  grid-template-columns: repeat(3, 32.6%);
+  column-gap: 1%;
+  row-gap: 5%;
+}
