--- a/Modulo14/main.css
+++ b/Modulo14/main.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Roboto, sans-serif;
+}
+
 .navbar {
   background-color: #e15f41;
 }
@@ -11,4 +15,8 @@
 .navbar-brand,
 .navbar-brand:hover {
   color: #fff;
+}
+
+.navbar-brand {
+  font-family: Pacifico, cursive;
 }
