--- a/Modulo14/main.css
+++ b/Modulo14/main.css
@@ -17,10 +17,20 @@ body {
   color: #fff;
 }
 
-.navbar-brand {
-  font-family: Pacifico, cursive;
-}
+
 
 .navbar-toggler {
+  background-color: #ffeae6;
+}
+
+.section-title {
+  font-family: Pacifico, cursive;
+
+}
+.section-title span{
+color: #e15f41;
+}
+
+#sobre-o-restaurante {
   background-color: #ffeae6;
 }
