--- a/sass/source/config/reset.scss
+++ b/sass/source/config/reset.scss
@@ -1,6 +1,8 @@
+@use 'variaveis';
+
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
-  font-family: sans-serif;
+  padding: 0;
+  font-family: variaveis.$fontPrincipal;
 }
