--- a/sass/source/main.scss
+++ b/sass/source/main.scss
@@ -1,10 +1,16 @@
 @use 'config/reset';
+@use 'config/variaveis.scss';
+@use 'sass:math';
 
 @mixin elementoForm() {
   padding: 8px;
   display: block;
   width: 100%;
   margin-bottom: 16px;
+}
+
+@function pixelParaEm($alvoEmPixel, $contextoEmPixel: 16px) {
+  @return math.div($alvoEmPixel, $contextoEmPixel)+em;
 }
 
 body {
@@ -19,8 +25,9 @@ body {
 
 header {
   padding: 16 0;
-  background-color: yellow;
-text-align: center;
+  background-color: variaveis.$corPrincipal;
+  text-align: center;
+  color: #fff;
 }
 
 .form-container {
@@ -30,23 +37,48 @@ text-align: center;
   align-items: center;
   justify-content: center;
 
+  h2 {
+    font-size: pixelParaEm(48px);
+    text-align: center;
+  }
+
   form {
     width: 100%;
     max-width: 480px;
     margin-top: 40px;
 
+    label {
+      font-weight: bold;
+      cursor: pointer;
+    }
+
     input {
       @include elementoForm();
       background-color: transparent;
       border: none;
-      border-bottom: 1px solid #000;
+      border-bottom: 3px solid variaveis.$corPrincipal;
     }
 
     button {
       @include elementoForm();
+      background-color: variaveis.$corSecundaria;
+      border: none;
+      cursor: pointer;
+      font-size: 18px;
+      font-weight: bold;
+      color: #fff;
+
+      &:hover {
+        background-color: darken(variaveis.$corSecundaria, 15%);
+      }
     }
 
 
   }
 }
 
+@media screen and (max-width: variaveis.$mobile) {
+  .container {
+    max-width: 80%;
+  }
+}
