--- a/sass/source/config/variaveis.scss
+++ b/sass/source/config/variaveis.scss
@@ -2,9 +2,9 @@
 $fontPrincipal: Roboto, sans-serif;
 
 // Esquema de cores
-$corDeFUndo: #c8d6e5;
-$corPrincipal: #01a3a4;
-$corSecundaria: #00d2d3;
+$corDeFUndo: #f5f6fa;
+$corPrincipal: #182C61;
+$corSecundaria: #44bd32;
 
 // Braekpoints
 $mobile: 767px;
