--- a/sass/source/main.scss
+++ b/sass/source/main.scss
@@ -13,8 +13,19 @@
   @return math.div($alvoEmPixel, $contextoEmPixel)+em;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family:  variaveis.$fontPrincipal;
+}
+
 body {
-  background-color: #eee;
+  background-color: variaveis.$corDeFUndo;
+}
+
+li {
+  list-style: none;
 }
 
 .container {
@@ -24,61 +35,83 @@ body {
 }
 
 header {
-  padding: 16 0;
   background-color: variaveis.$corPrincipal;
-  text-align: center;
-  color: #fff;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
-.form-container {
-  height: calc(100vh - 70px);
+header .container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  padding: 16px 0;
+}
 
-  h2 {
-    font-size: pixelParaEm(48px);
-    text-align: center;
+.menu {
+  display: flex;
+}
+
+.menu li {
+  font-weight: bold;
+  margin-left: 24px;
+}
+
+.menu li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+section {
+  padding: 56px 0;
+}
+
+.products {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 32.66%);
+  column-gap: 1%;
+  row-gap: 4%;
+  width: 100%;
+}
+
+.product-item img {
+  width: 100%;
+  border-radius: 16px;
+}
+
+.product-button {
+  display: block;
+  background-color: variaveis.$corSecundaria;
+  color: #fff;
+  text-align: center;
+  padding: 8px 0;
+  border-radius: 8px;
+  margin-top: 8px;
+  text-decoration: none;
+}
+
+.product-button:hover {
+  background-color: variaveis.$corSecundaria;
+}
+
+@media screen and (max-width: variaveis.$tablet) {
+  .container {
+      max-width: 80%;
   }
 
-  form {
-    width: 100%;
-    max-width: 480px;
-    margin-top: 40px;
-
-    label {
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    input {
-      @include elementoForm();
-      background-color: transparent;
-      border: none;
-      border-bottom: 3px solid variaveis.$corPrincipal;
-    }
-
-    button {
-      @include elementoForm();
-      background-color: variaveis.$corSecundaria;
-      border: none;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: bold;
-      color: #fff;
-
-      &:hover {
-        background-color: darken(variaveis.$corSecundaria, 15%);
-      }
-    }
-
-
+  .products {
+      grid-template-columns: repeat(2, 48.5%);
+      column-gap: 3%;
   }
 }
 
 @media screen and (max-width: variaveis.$mobile) {
-  .container {
-    max-width: 80%;
+  .products {
+      display: block;
+  }
+
+  .product-item  {
+      margin-bottom: 32%;
   }
 }
